force-app/main/default/objects/Exception_Log__c/fields/API_Status__c.field-meta.xml
<CustomField>
    <fullName>API_Status__c</fullName>
    <label>API Status</label>
    <length>200</length>
    <type>Text</type>
</CustomField>