force-app/main/default/objects/Exception_Log__c/fields/API_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>API_Status_Code__c</fullName>
    <label>API Status Code</label>
    <length>200</length>
    <type>Text</type>
</CustomField>