force-app/main/default/objects/Exception_Log__c/fields/Running_User__c.field-meta.xml
<CustomField>
    <fullName>Running_User__c</fullName>
    <label>Running User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>