force-app/main/default/objects/Exception_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>API_Status__c</columns>
    <columns>Apex_Method__c</columns>
    <columns>API_Status_Code__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Running_User__c</columns>
    <columns>Line_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>