force-app/main/default/objects/Exception_Log__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Apex_Method__c</columns>
    <columns>API_Status__c</columns>
    <columns>API_Status_Code__c</columns>
    <columns>Exception_Message__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Running_User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>